# latuicon

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  THIRD_PARTY_LICENSES.md  build.rs
.github/workflows/: release-plz.yml  rust.yml
data/: common_nerd.json  emoji.json  kaomoji.json  unicode.json
scripts/: deploy.sh
src/: main.rs  theme.rs
src/icon_picker/: catalog.rs  mod.rs  nerd_fonts.rs  picker.rs
