[package]
name = "latuicon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "latuicon"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.30", default-features = false, features = [
  "crossterm",
] }
ratatui-textarea = { version = "0.9.1", default-features = false }
crossterm = { version = "0.29", features = ["event-stream"] }
emojis = "0.7"
unicode_names2 = "2"
serde_json = "1"
