[package]
name = "latuicon"
version = "0.1.1"
edition = "2024"
description = "A terminal UI icon picker for emoji, kaomoji, Unicode characters, and Nerd Font glyphs"
repository = "https://github.com/coko7/latuicon"
authors = ["Coko <91132775+Coko7@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
keywords = ["tui", "icon-picker", "emoji", "terminal", "nerd-font"]
categories = ["command-line-utilities"]
exclude = ["scripts/", "target/"]

[[bin]]
name = "latuicon"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.30", default-features = false, features = [
  "crossterm",
] }
ratatui-textarea = { version = "0.9.1", default-features = false }
crossterm = { version = "0.29", features = ["event-stream"] }
emojis = "0.7"
unicode_names2 = "2"
serde_json = "1"
